--- a/blackjack.html
+++ b/blackjack.html
@@ -4,127 +4,183 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0a0a0a">
     <title>Game Suite - Blackjack</title>
+
+    <!-- External CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/blackjack.css">
 </head>
 
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="welcome.html" class="nav-logo">Game Suite</a>
-            <!-- Update the navigation toggle button with ARIA attributes -->
-            <button class="nav-toggle" id="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
-                <span class="burger"></span>
-                <span class="burger"></span>
-                <span class="burger"></span>
-            </button>
-            <ul class="nav-menu" id="nav-menu">
-                <li class="nav-item"><a href="blackjack.html" class="nav-link">Blackjack</a></li>
-                <li class="nav-item"><a href="rocket-crash.html" class="nav-link">Rocket Crash</a></li>
-                <li class="nav-item"><a href="Scratch_Win.html" class="nav-link">Scratch</a></li>
-                <li class="nav-item"><a href="findtheneedle.html" class="nav-link">Joker</a></li>
-                <li class="nav-item"><a href="welcome.html" class="nav-link">User</a></li>
-            </ul>
+    <!-- Navigation -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">Cosmic Card Club</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarContent">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="rocket-crash.html">Rock Crash</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Scratch_Win.html">Scratch Card</a></li>
+                        <li class="nav-item"><a class="nav-link" href="findtheneedle.html">Joker</a></li>
+                        <li class="nav-item"><a class="nav-link" href="welcome.html">User</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section id="hero" class="hero-section">
+        <div class="container text-center">
+            <h1>Blackjack</h1>
+            <p class="lead mb-4">Blackjack is a popular card game where the goal is to have a hand value closer to 21 than the dealer without exceeding 21.</p>
+            <div class="card-container">
+                <!-- Card Examples -->
+                <div class="card-item">
+                    <img src="./img/c12.png" alt="Face card worth 10" class="card-image" draggable="false">
+                    <p class="lead mb-4">Face card worth 10</p>
+                </div>
+                <div class="card-item">
+                    <img src="./img/c01.png" alt="Ace card worth 1 or 11" class="card-image" draggable="false">
+                    <p class="lead mb-4">Ace card worth 1 or 11</p>
+                </div>
+                <div class="card-item">
+                    <img src="./img/c08.png" alt="Number card worth its face value" class="card-image" draggable="false">
+                    <p class="lead mb-4">Other cards worth their face value</p>
+                </div>
+            </div>
+            <button class="start-button" onclick="location.href='#content'">Start Playing</button>
         </div>
-    </nav>
+    </section>
 
-    <!-- Main Game Area -->
-    <main class="blackjack-game">
-        <h1>Blackjack Game</h1>
-        <!-- Change text to Current Balance and set money color to bright yellow -->
-        <section id="balance-display" class="balance-display">
-            Current Balance: <span id="total-balance">0.00</span>
-        </section>
+    <!-- Game Section -->
+    <section id="content" class="content-section py-5">
+        <div class="container">
+            <main class="blackjack-game" role="main">
+                <!-- Balance Display -->
+                <div class="row mb-3">
+                    <div class="col text-start">
+                        <h3>Balance: <span id="total-balance">£0.00</span></h3>
+                    </div>
+                </div>
 
-        <!-- Dealer's Hand Section -->
-        <section id="dealer-hand" class="hand">
-            <p>Dealer's Hand:</p>
-            <div id="dealer-cards"></div>
-            <p id="dealer-total-value">Dealer's Total:</p>
-        </section>
+                <!-- Game Area -->
+                <div class="row mb-3">
+                    <div class="col text-center">
+                        <div id="dealer-cards" class="card-display"></div>
+                        <p id="dealer-total-value">Dealer hand total: ?</p>
+                    </div>
+                </div>
 
-        <!-- Result Display -->
-        <section id="result" class="result-display"></section>
+                <div class="row mb-3">
+                    <div class="col text-center">
+                        <div id="result" role="alert"></div>
+                    </div>
+                </div>
 
-        <!-- Player's Hand Section -->
-        <section id="player-hand" class="hand">
-            <p>Your Hand:</p>
-            <div id="player-cards"></div>
-            <p id="player-total-value">Your Total:</p>
-        </section>
+                <div class="row mb-3">
+                    <div class="col text-center">
+                        <div id="player-cards" class="card-display"></div>
+                        <p id="player-total-value">Player hand total: ?</p>
+                    </div>
+                </div>
 
-        <!-- Betting Chips Section -->
-        <section id="chips-area" class="chips-section">
-            <div class="chip-container">
-                <img id="chip-1" class="chip" src="img/chip_smallblind_top.png" data-value="1" alt="£1 Chip" draggable="true">
-                <p>£1</p>
-            </div>
-            <div class="chip-container">
-                <img id="chip-10" class="chip" src="img/chip_pink_top.png" data-value="10" alt="£10 Chip" draggable="true">
-                <p>£10</p>
-            </div>
-            <div class="chip-container">
-                <img id="chip-50" class="chip" src="img/chip_gray_top.png" data-value="50" alt="£50 Chip" draggable="true">
-                <p>£50</p>
-            </div>
-            <div class="chip-container">
-                <img id="chip-100" class="chip" src="img/chip_green_top.png" data-value="100" alt="£100 Chip" draggable="true">
-                <p>£100</p>
-            </div>
-            <div class="chip-container">
-                <img id="chip-500" class="chip" src="img/chip_purple_top.png" data-value="500" alt="£500 Chip" draggable="true">
-                <p>£500</p>
-            </div>
-            <div class="chip-container">
-                <img id="chip-all-in" class="chip" src="img/chip_red_top.png" data-value="all" alt="All-in Chip" draggable="true">
-                <p>All In</p>
-            </div>
-        </section>
+                <!-- Betting Area -->
+                <div class="row mb-3">
+                    <div class="col-12 text-center mb-2">
+                        <div id="chips" class="betting-area">Betting Area: Place Your Bets!</div>
+                    </div>
+                    <div class="col-12">
+                        <div class="chips-wrapper">
+                            <div id="chips-area" class="chips-section">
+                                <!-- Chips -->
+                                <div class="chip-container" aria-label="One pound chip">
+                                    <img class="chip" src="img/chip_smallblind_top.png" data-value="1" alt="£1">
+                                    <p>£1</p>
+                                </div>
+                                <div class="chip-container" aria-label="Ten pounds chip">
+                                    <img class="chip" src="img/chip_pink_top.png" data-value="10" alt="£10">
+                                    <p>£10</p>
+                                </div>
+                                <div class="chip-container" aria-label="Fifty pounds chip">
+                                    <img class="chip" src="img/chip_gray_top.png" data-value="50" alt="£50">
+                                    <p>£50</p>
+                                </div>
+                                <div class="chip-container" aria-label="One hundred pounds chip">
+                                    <img class="chip" src="img/chip_green_top.png" data-value="100" alt="£100">
+                                    <p>£100</p>
+                                </div>
+                                <div class="chip-container" aria-label="Five hundred pounds chip">
+                                    <img class="chip" src="img/chip_purple_top.png" data-value="500" alt="£500">
+                                    <p>£500</p>
+                                </div>
+                                <div class="chip-container" aria-label="All in chip">
+                                    <img class="chip" src="img/chip_red_top.png" data-value="all" alt="All-in">
+                                    <p>All In</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-        <!-- Betting Area -->
-        <section id="chips" class="betting-area">
-            Betting Area: Drop Your Bets Here!
-        </section>
+                <!-- Game Controls -->
+                <div class="row mb-3">
+                    <div class="col">
+                        <div class="controls" role="group">
+                            <button id="play-button" class="btn btn-success d-none">Play</button>
+                            <button id="hit-button" class="btn btn-primary d-none">Hit</button>
+                            <button id="stand-button" class="btn btn-warning d-none">Stand</button>
+                            <button id="clear-bet-button" class="btn btn-secondary">Clear Bet</button>
+                            <button id="restart-button" class="btn btn-danger">Restart</button>
+                        </div>
+                    </div>
+                </div>
 
-        <!-- Control Buttons -->
-        <section class="controls">
-            <!-- Play Button: Appears after placing bets -->
-            <button id="play-button" class="play-button" style="display: none;">Play</button>
+                <!-- Statistics -->
+                <div class="row">
+                    <div class="col text-center">
+                        <button id="toggle-stats-button" class="btn btn-info mb-2">Stats</button>
+                        <div id="stats-content" class="d-none">
+                            <h3>Game Statistics</h3>
+                            <p id="total-profit">Total Profit: £0.00</p>
+                            <p id="total-wins">Games won: 0</p>
+                            <p id="total-losses">Total Losses: £0.00</p>
+                            <p id="total-bets">Total Bets Placed: £0.00</p>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </section>
 
-            <!-- Hit and Stand Buttons: Only show after clicking Play -->
-            <button id="hit-button" style="display: none;">Hit</button>
-            <button id="stand-button" style="display: none;">Stand</button>
-            <button id="restart-button">Restart</button>
-        </section>
-
-        <!-- User Statistics Section -->
-        <section id="statistics" class="statistics">
-            <button id="toggle-stats-button">Game Stats</button>
-            <div id="stats-content" style="display: none;">
-                <h3>Game Statistics</h3>
-                <p id="total-profit">Total Profit: £920.00</p>
-                <p id="total-wins">Games won: 2670</p>
-                <p id="total-losses">Total Losses: £2,400.00</p>
-                <p id="total-bets">Total Bets Placed: £2,700.00</p>
-            </div>
-        </section>
-    </main>
-
-    <!-- Modal for Alerts -->
-    <div class="modal" id="modal">
+    <!-- Modal -->
+    <div id="modal" class="modal">
         <div class="modal-content">
-            <span class="close-button" id="close-modal">&times;</span>
-            <p id="modal-message">Please place a bet before proceeding.</p>
+            <span id="close-modal" class="close-button">&times;</span>
+            <p id="modal-message"></p>
         </div>
     </div>
 
-    <!-- Script -->
+    <!-- Footer -->
+    <footer id="footer" class="site-footer">
+        <div class="container">
+            <p>&copy; 2024 Cosmic Card Club. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Corrected path to userProfile.js -->
+    <script src="./js/userProfile.js"></script>
     <script src="./js/blackjack.js"></script>
     <script>
         document.getElementById('toggle-stats-button').addEventListener('click', () => {
-            const statsContent = document.getElementById('stats-content');
-            statsContent.style.display = statsContent.style.display === 'none' ? 'block' : 'none';
+            document.getElementById('stats-content').classList.toggle('d-none');
         });
     </script>
 </body>
