--- a/welcome.html
+++ b/welcome.html
@@ -8,123 +8,157 @@
     <!-- Google Fonts -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <!-- CSS -->
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/welcome.css">
-    <meta name="theme-color" content="#121212">
 </head>
 
 <body>
     <!-- Background Music -->
-    <audio id="background-music" src="./sounds/background_music.mp3" autoplay loop style="display: none;"></audio>
+    <audio id="background-music" src="./sounds/background_music.mp3" autoplay loop muted style="display: none;"></audio>
 
-    <!-- Use <header> for Navigation Bar -->
-    <header>
-        <nav class="navbar">
-            <div class="nav-container">
-                <span class="nav-logo">Game Suite</span>
-                <div class="nav-toggle" id="mobile-menu">
-                    <span class="burger"></span>
-                    <span class="burger"></span>
-                    <span class="burger"></span>
-                </div>
-                <ul class="nav-menu" id="nav-menu">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Game Suite</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <button id="sound-toggle" class="nav-link">
+                        <button id="sound-toggle" class="btn btn-outline-light me-2">
                             <i class="fas fa-volume-mute" id="sound-icon"></i>
                         </button>
                     </li>
                     <li class="nav-item">
-                        <button id="logout-button" class="nav-link">Logout</button>
+                        <button id="logout-button" class="btn btn-outline-danger">Logout</button>
                     </li>
                 </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
 
-    <!-- Use <main> for the main content -->
-    <main class="welcome-container">
-        <h1>Welcome, <span id="username">Player</span>!</h1>
-        <div class="user-stats">
-            <p>Total Bets: <span id="total-bets"></span></p>
-            <p>Games Won on Blackjack: <span id="total-wins"></span></p>
-            <p>Total Losses: <span id="total-losses"></span></p>
-            <p>Total Balance: <span id="total-balance"></span></p>
-            <p>Total Profit: <span id="total-profit"></span></p>
+    <!-- Main Content -->
+    <main class="welcome-container container mt-5 pt-4">
+        <h1 class="text-center">Welcome, <span id="username">Guest</span>!</h1>
+        
+        <!-- User Stats -->
+        <div class="user-stats row justify-content-center my-4">
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+                <p>Total Bets: <span id="total-bets">£0.00</span></p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+                <p>Games Won on Blackjack: <span id="total-wins">0</span></p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+                <p>Total Losses: <span id="total-losses">£0.00</span></p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+                <p>Current Balance: <span id="total-balance">£1300.00</span></p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+                <p>Total Profit: <span id="total-profit">£0.00</span></p>
+            </div>
         </div>
 
-        <!-- Game Options Carousel -->
-        <div class="carousel-container">
-            <div class="carousel">
-                <!-- Game Card - Blackjack -->
-                <div class="game-card">
-                    <img src="img/temp_blackjack.webp" alt="Blackjack Game" class="game-image">
-                    <div class="game-details">
-                        <h2 class="game-title">Blackjack</h2>
-                        <p class="game-description">A classic casino game of skill and luck. Place your bets!</p>
-                        <button id="blackjack-game" class="play-now-button">Play Now</button>
-                    </div>
-                </div>
-
-                <!-- Game Card - Rocket Crash -->
-                <div class="game-card">
-                    <img src="img/rocket_logo.webp" alt="Rocket Crash Game" class="game-image">
-                    <div class="game-details">
-                        <h2 class="game-title">Rocket Crash</h2>
-                        <p class="game-description">Get ready for an explosive adventure. How far can you go?</p>
-                        <button id="rocket-crash-game" class="play-now-button">Play Now</button>
-                    </div>
-                </div>
-
+        <!-- Game Carousel Section -->
+        <div id="gameCarousel" class="carousel slide carousel-container mb-4" data-bs-ride="false" data-bs-interval="false">
+            <div class="carousel-inner">
                 <!-- Spin the Wheel Section -->
-                <div class="game-card">
-                    <h2 class="game-title">Spin the Wheel to Win Balance!</h2>
-                    <div class="wheel-wrapper">
+                <div class="carousel-item active">
+                    <div class="spin-wheel-container mb-4">
+                        <h2>Spin the Wheel to Win Balance!</h2>
                         <canvas id="wheelCanvas" width="300" height="300"></canvas>
-                    </div>
-                    <button id="spin-button" class="spin-button">Spin Now</button>
-                </div>
-
-                <!-- Game Card - Scratch & Win -->
-                <div class="game-card">
-                    <img src="img/scratch_logo.webp" alt="Scratch & Win Game" class="game-image">
-                    <div class="game-details">
-                        <h2 class="game-title">Scratch & Win</h2>
-                        <p class="game-description">Try your luck and see if you can reveal a winning combination!</p>
-                        <button id="scratch-game" class="play-now-button">Play Now</button>
+                        <button id="spin-button" class="spin-button">Spin (3 left)</button>
                     </div>
                 </div>
+                <!-- Blackjack Card -->
+                <div class="carousel-item">
+                    <div class="card">
+                        <img src="img/temp_blackjack.webp" class="card-img-top" alt="Blackjack Game">
+                        <div class="card-body">
+                            <h5 class="card-title">Blackjack</h5>
+                            <p class="card-text">A classic casino game of skill and luck. Place your bets!</p>
+                            <button id="blackjack-game" class="btn btn-success">Play Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Rocket Crash Card -->
+                <div class="carousel-item">
+                    <div class="card">
+                        <img src="img/rocket_logo.webp" class="card-img-top" alt="Rocket Crash Game">
+                        <div class="card-body">
+                            <h5 class="card-title">Rocket Crash</h5>
+                            <p class="card-text">Get ready for an explosive adventure. How far can you go?</p>
+                            <button id="rocket-crash-game" class="btn btn-success">Play Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Scratch Game Card -->
+                <div class="carousel-item">
+                    <div class="card">
+                        <img src="img/scratch_logo.webp" class="card-img-top" alt="Scratch Game">
+                        <div class="card-body">
+                            <h5 class="card-title">Scratch Game</h5>
+                            <p class="card-text">Try your luck with the scratch game. Win big!</p>
+                            <button id="scratch-game" class="btn btn-success">Play Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- jOKER -->
+                <div class="carousel-item">
+                    <div class="card">
+                        <img src="img/hidden.png" class="card-img-top" alt="Scratch Game">
+                        <div class="card-body">
+                            <h5 class="card-title">joker</h5>
+                            <p class="card-text">Try your luck with finding the joker</p>
+                            <button id="joker-game" class="btn btn-success">Play Now</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- Pagination Dots -->
-            <div class="carousel-pagination" id="carousel-pagination"></div>
-        </div>
-
-        <!-- Reward Modal -->
-        <div id="reward-modal" class="modal">
-            <div class="modal-content">
-                <span class="close-button" id="close-reward-modal">&times;</span>
-                <p id="reward-message">Congratulations! You have won £50!</p>
-                <button id="reward-ok-button" class="modal-button">OK</button>
-            </div>
-        </div>
-
-        <!-- Logout Modal -->
-        <div id="logout-modal" class="modal">
-            <div class="modal-content">
-                <span class="close-button" id="close-logout-modal">&times;</span>
-                <p>Are you sure you want to log out? Your user data will be deleted.</p>
-                <button id="confirm-logout-button" class="modal-button">Yes, Log Out</button>
-                <button id="cancel-logout-button" class="modal-button modal-button-secondary">Cancel</button>
-            </div>
+            <!-- Carousel Navigation -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#gameCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#gameCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </main>
 
-    <!-- Use <footer> for the footer -->
+    <!-- Reward Modal -->
+    <div id="reward-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-reward-modal" class="close">&times;</span>
+            <p id="reward-message"></p>
+            <button id="reward-ok-button" class="btn btn-primary">OK</button>
+        </div>
+    </div>
+
+    <!-- Logout Modal -->
+    <div id="logout-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-logout-modal" class="close">&times;</span>
+            <p>Are you sure you want to logout?</p>
+            <button id="cancel-logout-button" class="btn btn-secondary">Cancel</button>
+            <button id="confirm-logout-button" class="btn btn-danger">Logout</button>
+        </div>
+    </div>
+
+    <!-- Footer -->
     <footer class="footer">
         <p>Created by <span class="creator">Hammy</span></p>
     </footer>
 
     <!-- JavaScript -->
     <script src="./js/welcome.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
