--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <p>&copy; 2024 Gaming Portal. All rights reserved.</p>
+            <p>&copy; Created By Hammy.</p>
         </div>
     </footer>
 
