--- a/welcome.html
+++ b/welcome.html
@@ -70,7 +70,7 @@
                 <!-- Spin the Wheel Section -->
                 <div class="carousel-item active">
                     <div class="spin-wheel-container mb-4">
-                        <h2>Spin the Wheel/h2>
+                        <h2>Spin the Wheel</h2>
                         <canvas id="wheelCanvas" width="300" height="300"></canvas>
                         <button id="spin-button" class="spin-button">Spin (3 left)</button>
                     </div>
