--- a/Scratch_Win.html
+++ b/Scratch_Win.html
@@ -153,6 +153,7 @@
 
   <!-- Include scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./js/userProfile.js"></script>
   <!-- Include the main game JavaScript -->
   <script src="./js/Scratch_Win.js"></script>
 </body>
