--- a/findtheneedle.html
+++ b/findtheneedle.html
@@ -124,6 +124,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/userProfile.js"></script>
     <script src="./js/findtheneedle.js"></script>
 </body>
 </html>
