--- a/welcome.html
+++ b/welcome.html
@@ -34,6 +34,9 @@
                         </button>
                     </li>
                     <li class="nav-item">
+                        <button id="redeem-code-button" class="btn btn-outline-warning me-2">Redeem Code</button>
+                    </li>
+                    <li class="nav-item">
                         <button id="logout-button" class="btn btn-outline-danger">Logout</button>
                     </li>
                 </ul>
@@ -141,6 +144,18 @@
         </div>
     </div>
 
+    <!-- Redeem Code Modal -->
+    <div id="redeem-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-redeem-modal" class="close">&times;</span>
+            <h2>Redeem Code</h2>
+            <p>Enter a valid code to redeem your reward:</p>
+            <input type="text" id="redeem-code-input" class="form-control mb-3" placeholder="Enter Code">
+            <button id="redeem-code-submit" class="btn btn-success">Redeem</button>
+            <p id="redeem-message" class="mt-2" style="color: red; font-weight: bold; display: none;"></p>
+        </div>
+    </div>
+
     <!-- Logout Modal -->
     <div id="logout-modal" class="modal">
         <div class="modal-content">
@@ -157,6 +172,7 @@
     </footer>
 
     <!-- JavaScript -->
+     <script src="./js/userProfile.js"></script>
     <script src="./js/welcome.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
