--- a/welcome.html
+++ b/welcome.html
@@ -29,12 +29,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <button id="sound-toggle" class="btn btn-outline-light me-2">
-                            <i class="fas fa-volume-mute" id="sound-icon"></i>
+                        <button id="redeem-button" class="btn btn-outline-warning me-2">
+                            Redeem Code
                         </button>
                     </li>
                     <li class="nav-item">
-                        <button id="redeem-code-button" class="btn btn-outline-warning me-2">Redeem Code</button>
+                        <button id="sound-toggle" class="btn btn-outline-light me-2">
+                            <i class="fas fa-volume-mute" id="sound-icon"></i>
+                        </button>
                     </li>
                     <li class="nav-item">
                         <button id="logout-button" class="btn btn-outline-danger">Logout</button>
@@ -144,18 +146,6 @@
         </div>
     </div>
 
-    <!-- Redeem Code Modal -->
-    <div id="redeem-modal" class="modal">
-        <div class="modal-content">
-            <span id="close-redeem-modal" class="close">&times;</span>
-            <h2>Redeem Code</h2>
-            <p>Enter a valid code to redeem your reward:</p>
-            <input type="text" id="redeem-code-input" class="form-control mb-3" placeholder="Enter Code">
-            <button id="redeem-code-submit" class="btn btn-success">Redeem</button>
-            <p id="redeem-message" class="mt-2" style="color: red; font-weight: bold; display: none;"></p>
-        </div>
-    </div>
-
     <!-- Logout Modal -->
     <div id="logout-modal" class="modal">
         <div class="modal-content">
@@ -166,13 +156,24 @@
         </div>
     </div>
 
+    <!-- Add Redeem Modal before the footer -->
+    <div id="redeem-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-redeem-modal" class="close">&times;</span>
+            <h5>Enter Redeem Code</h5>
+            <input type="text" id="redeem-code-input" class="form-control mb-3" placeholder="Enter code">
+            <p id="redeem-message"></p>
+            <button id="submit-redeem-code" class="btn btn-success">Submit</button>
+            <button id="cancel-redeem" class="btn btn-secondary">Cancel</button>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer">
         <p>Created by <span class="creator">Hammy</span></p>
     </footer>
 
     <!-- JavaScript -->
-     <script src="./js/userProfile.js"></script>
     <script src="./js/welcome.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
